Adding training notebooks and finished dataset eval

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,8 @@ datasets/*
 models/*
 !models/.gitkeep
 results/*
-
+!models/training
+models/training/weights/last_model.pth
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
