--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@ models/*
 results/*
 !models/training
 models/training/weights/last_model.pth
+!models/MobileNetClassifier
+models/MobileNetClassifier/weights/last_model.pth
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
