--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,12 @@ datasets/*
 models/*
 !models/.gitkeep
 results/*
-!models/training
-models/training/weights/last_model.pth
+!models/DeepSegmentor/.gitkeep
 !models/MobileNetClassifier
 models/MobileNetClassifier/weights/last_model.pth
+!models/ViTClassifier
+models/ViTClassifier/weights/last_model.pth
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
